# block-chain-project

./: CMakeLists.txt  README.md  main.cpp
base/: Blockchain.h  block.h  transaction.h
functions/: hashFunctions.h
structures/: BPlusTree.h  DoubleList.h  Hash.h  Heap.h  nodes.h
ui/: button.h  gui.h  input.h  password.h  word.h
utils/: stoli.h  swap.h  unix.h
